--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
       </div>
     </div>
     <!-- Script -->
-    <script src="script.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
